# lo-phi

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  demo.tape  plan.md  presentation_presenterm.md  presentation_slides.md  project_summary.md
.cursor/plans/: feature-4a575303.plan.md
.github/workflows/: build.yml  ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
Formula/: lophi.rb
benches/: binning_benchmark.rs  correlation_benchmark.rs
docs/: STATUS.md  algorithms.md  architecture.md  developer-guide.md  glossary.md  output-reference.md  user-guide.md  worked-example.md
docs/adr/: ADR-001-polars-framework.md  ADR-002-highs-solver.md  ADR-003-cart-default-binning.md  ADR-004-woe-convention.md  ADR-005-welford-correlation.md  ADR-006-sequential-pipeline.md  ADR-007-dual-file-format.md  ADR-008-ratatui-tui.md  ADR-009-categorical-correlation.md  README.md
docs/examples/: synthetic_data.csv  synthetic_data_gini_analysis.json  synthetic_data_reduced.csv  synthetic_data_reduction_report.csv  synthetic_data_reduction_report.json
scripts/: generate_test_data.py
specs/002-sas7bdat-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sas7bdat-support/checklists/: requirements.md
specs/1-project-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-project-docs/checklists/: requirements.md
specs/1-project-docs/contracts/: adr-template.md  doc-structure.md
specs/3-tui-wizard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-tui-wizard/checklists/: requirements.md
src/: lib.rs  main.rs
src/cli/: args.rs  config_menu.rs  convert.rs  mod.rs  progress_overlay.rs  prompts.rs  shared.rs  theme.rs  wizard.rs
src/pipeline/: correlation.rs  iv.rs  loader.rs  missing.rs  mod.rs  progress.rs  sampling.rs  target.rs  weights.rs
src/pipeline/sas7bdat/: column.rs  constants.rs  data.rs  decompress.rs  error.rs  header.rs  mod.rs  page.rs  subheader.rs
src/pipeline/solver/: mod.rs  model.rs  monotonicity.rs  precompute.rs
src/report/: gini_export.rs  mod.rs  reduction_report.rs  summary.rs
src/utils/: mod.rs  progress.rs  styling.rs
tests/: generate_sas_expected.py  test_categorical_correlation.rs  test_cli.rs  test_convert.rs  test_correlation.rs  test_loader.rs  test_missing.rs  test_pipeline.rs  test_report.rs  test_sampling.rs  test_sas7bdat.rs  test_solver.rs  test_target_mapping.rs  test_wizard.rs
tests/common/: mod.rs
tests/fixtures/sas7bdat/: 0x00controlbyte.sas7bdat
tests/fixtures/sas7bdat/expected/: 0x00controlbyte.json  0x40controlbyte.json  airline.json  cars.json  corrupt.json  dates_null.json  datetime.json  load_log.json  many_columns.json  max_sas_date.json  productsales.json  tagged-na.json  test1.json  test_12659.json  test_meta2_page.json  zero_rows.json  zero_variables.json
