[package]
name = "feature-reduce"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for feature reduction in datasets using missing value and correlation analysis"
authors = ["Neels Bester"]

[[bin]]
name = "feature-reduce"
path = "src/main.rs"

[dependencies]
# Data processing - memory-efficient large dataset handling
polars = { version = "0.46", features = ["lazy", "csv", "parquet", "dtype-full"] }

# CLI arguments - type-safe argument parsing with defaults
clap = { version = "4.5", features = ["derive"] }

# Progress bars - beautiful progress indicators
indicatif = "0.17"

# Interactive prompts - step confirmations and threshold adjustments
dialoguer = "0.11"

# Table output - display reduction summaries
comfy-table = "7.1"

# Error handling - clean error messages
anyhow = "1.0"
thiserror = "2.0"
