[package]
name = "lophi"
version = "0.1.0"
edition = "2024"
description = "Lo-phi: A CLI tool for feature reduction using missing value and correlation analysis"
authors = ["Neels Bester"]

[[bin]]
name = "lophi"
path = "src/main.rs"

[dependencies]
# Data processing - memory-efficient large dataset handling
polars = { version = "0.46", features = ["lazy", "csv", "parquet", "dtype-full"] }

# CLI arguments - type-safe argument parsing with defaults
clap = { version = "4.5", features = ["derive"] }

# Progress bars - beautiful progress indicators
indicatif = "0.17"

# Interactive prompts - step confirmations and threshold adjustments
dialoguer = "0.11"

# Table output - display reduction summaries
comfy-table = "7.1"

# Error handling - clean error messages
anyhow = "1.0"
thiserror = "2.0"

# Parallel processing
rayon = "1.10"

# Rich terminal styling - colors, emojis, and formatting
console = "0.15"

# TUI framework - interactive configuration menu
ratatui = "0.29"
crossterm = "0.28"

# JSON serialization - export analysis results
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
