[package]
name = "lophi"
version = "0.1.0"
edition = "2021"
description = "Lo-phi: A CLI tool for feature reduction using missing value and correlation analysis"
authors = ["Neels Bester"]

[[bin]]
name = "lophi"
path = "src/main.rs"

[lib]
name = "lophi"
path = "src/lib.rs"

[dependencies]
# Data processing - memory-efficient large dataset handling
polars = { version = "0.46", features = ["lazy", "csv", "parquet", "dtype-full", "streaming"] }

# CLI arguments - type-safe argument parsing with defaults
clap = { version = "4.5", features = ["derive"] }

# Progress bars - beautiful progress indicators
indicatif = "0.17"

# Interactive prompts - step confirmations and threshold adjustments
dialoguer = "0.11"

# Table output - display reduction summaries
comfy-table = "7.1"

# Error handling - clean error messages
anyhow = "1.0"
thiserror = "2.0"

# Parallel processing
rayon = "1.10"

# Rich terminal styling - colors, emojis, and formatting
console = "0.15"

# Date/time handling - timestamps for progress tracking
chrono = "0.4"

# TUI framework - interactive configuration menu
ratatui = "0.29"
crossterm = "0.28"

# JSON serialization - export analysis results
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Linear/Mixed-Integer Programming solver for optimal binning
# Using HiGHS backend only (default-features = false disables Cbc which requires separate library)
good_lp = { version = "1.8", default-features = false, features = ["highs"] }

[dev-dependencies]
# Temporary files for testing
tempfile = "3.10"

# Random data generation for test fixtures
rand = "0.8"

# CLI testing utilities
assert_cmd = "2.0"
predicates = "3.1"

# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "binning_benchmark"
harness = false
